# Git-Archiver

./: .gitignore  CLAUDE.md  ENHANCEMENT_PLAN.md  README.md  auto_update_config.json  requirements.txt  run.py
.portfolio/: architecture.md  qa.md  stack.md
config/: .gitkeep
git-archiver-v2/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
git-archiver-v2/src-tauri/: Cargo.toml  tauri-signing-key.pub  tauri.conf.json
git-archiver-v2/src-tauri/capabilities/: default.json
git-archiver-v2/src-tauri/icons/: icon.icns
git-archiver-v2/src-tauri/migrations/: 001_initial.sql  002_add_readme_content.sql
git-archiver-v2/src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs  tray.rs
git-archiver-v2/src-tauri/src/commands/: archives.rs  migrate.rs  mod.rs  repos.rs  settings.rs  tasks.rs
git-archiver-v2/src-tauri/src/core/: archive.rs  git.rs  github_api.rs  hasher.rs  mod.rs  scheduler.rs  task_manager.rs  url.rs  worker.rs
git-archiver-v2/src-tauri/src/db/: archives.rs  file_hashes.rs  migrations.rs  mod.rs  repos.rs  settings.rs
git-archiver-v2/src-tauri/tests/: pipeline.rs
scripts/: create_fresh_json.py  repair_json.py  sync_repos.py
src/: __init__.py  auto_update_config.json  cli.py  config.py  data_store.py  github_api.py  github_repo_saver.py  github_repo_saver_cli.py  github_repo_saver_gui.py  github_repo_saver_gui.py.bak  github_repo_saver_web.py  main.py  repo_manager.py  tooltip_patch.py  utils.py
templates/: index.html
tests/: __init__.py  test_config.py  test_data_store.py  test_utils.py  (+2 more)
(+46 files in other folders)
