[package]
name = "git-archiver-v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "git_archiver_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["json"] }
tar = "0.4"
xz2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
md-5 = "0.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
